--- a/package.json
+++ b/package.json
@@ -3,12 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^20.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aos": "^3.0.0-beta.6",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "cross-env": "^7.0.2",
+    "data-hero": "^1.2.9",
+    "event-emitter": "^0.3.5",
+    "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
+    "fontsource-roboto": "^2.1.4",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.2.2",
+    "moment": "^2.26.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-bootstrap-switch": "^15.5.3",
+    "react-chartjs-2": "^2.9.0",
+    "react-data-table-component": "^6.11.0",
+    "react-dom": "16.13.1",
+    "react-emoji": "*",
+    "react-fancybox": "^0.2.5",
+    "react-html-parser": "^2.0.2",
+    "react-icons": "^3.10.0",
+    "react-images-upload": "^1.2.8",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "*",
+    "react-select": "^3.1.0",
+    "react-table": "^7.2.1",
+    "reactstrap": "^8.5.1",
+    "styled-components": "^5.1.1",
+    "typescript": "^3.9.6",
+    "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
