--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "data-hero": "^1.2.9",
     "event-emitter": "^0.3.5",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "fontsource-roboto": "^2.1.4",
     "mobx": "^5.15.4",
@@ -45,7 +46,7 @@
     "universal-cookie": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
