--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-emoji": "*",
     "react-fancybox": "^0.2.5",
+    "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^3.10.0",
     "react-images-upload": "^1.2.8",
