--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.1",
     "react-bootstrap-switch": "^15.5.3",
     "react-chartjs-2": "^2.9.0",
+    "react-csv": "^2.0.3",
     "react-data-table-component": "^6.11.0",
     "react-dom": "16.13.1",
     "react-emoji": "*",
@@ -41,6 +42,7 @@
     "react-select": "^3.1.0",
     "react-strap-table": "^1.0.7",
     "react-table": "^7.2.1",
+    "react-to-print": "^2.10.0",
     "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.6",
