--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "react-scroll-to-bottom": "*",
     "react-select": "^3.1.0",
     "react-slick": "^0.27.11",
-    "react-snapshot": "^1.3.0",
     "reactstrap": "^8.5.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
@@ -46,7 +45,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "react-scripts start",
-    "build": "react-scripts build  && react-snapshot",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -64,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-snap": "^1.23.0"
   }
 }
