--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.26.0",
+    "nodemailer": "^6.6.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
