--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aos": "^3.0.0-beta.6",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "cross-env": "^7.0.2",
     "data-hero": "^1.6.4",
@@ -18,10 +18,9 @@
     "express-favicon": "^2.0.1",
     "font-awesome": "^4.7.0",
     "fontsource-roboto": "^2.1.4",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
-    "moment": "^2.26.0",
-    "nodemailer": "^6.6.1",
+    "mobx": "^6.3.2",
+    "mobx-react-lite": "^3.2.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
@@ -38,8 +37,11 @@
     "react-select": "^3.1.0",
     "react-slick": "^0.27.11",
     "reactstrap": "^8.5.1",
+    "short-id": "^0.1.0-1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
+    "suneditor": "^2.39.0",
+    "suneditor-react": "^3.1.2",
     "typescript": "^3.9.6",
     "universal-cookie": "^4.0.3"
   },
