--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scroll-to-bottom": "*",
     "react-select": "^3.1.0",
     "react-slick": "^0.27.11",
+    "react-toastify": "^7.0.4",
     "reactstrap": "^8.5.1",
     "short-id": "^0.1.0-1",
     "slick-carousel": "^1.8.1",
