--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "mobx-react-lite": "^3.2.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-data-table-component": "^6.11.7",
+    "react-dom": "^17.0.2",
     "react-emoji": "*",
     "react-fancybox": "^0.2.5",
     "react-helmet": "^6.1.0",
@@ -42,7 +43,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1",
     "suneditor": "^2.39.0",
-    "suneditor-react": "^3.1.2",
+    "suneditor-react": "^3.1.1",
     "typescript": "^3.9.6",
     "universal-cookie": "^4.0.3"
   },
