--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "styled-components": "^5.1.1",
     "suneditor": "^2.39.0",
     "suneditor-react": "^3.1.1",
-    "typescript": "^3.9.6",
+    "typescript": "^5.8.2",
     "universal-cookie": "^4.0.3"
   },
   "scripts": {
     "start": "node server.js",
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -71,5 +71,8 @@
   },
   "devDependencies": {
     "react-snap": "^1.23.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
